--- a/UI/WebStore/Areas/Admin/Views/Home/ProductList.cshtml
+++ b/UI/WebStore/Areas/Admin/Views/Home/ProductList.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebStore.Domain.Entities.Product>
+﻿@model IEnumerable<WebStore.Domain.DTO.ProductDTO>
 @{
     ViewData["Title"] = "Список товаров";
 }
@@ -10,13 +10,13 @@
 <table class="table">
     <thead>
         <tr>
-            <td>@Html.DisplayNameFor(product => product.Id)</td>
-            <td>@Html.DisplayNameFor(product => product.Name)</td>
-            <td>@Html.DisplayNameFor(product => product.Order)</td>
-            <td>@Html.DisplayNameFor(product => product.SectionId)</td>
-            <td>@Html.DisplayNameFor(product => product.BrandId)</td>
-            <td>@Html.DisplayNameFor(product => product.ImageUrl)</td>
-            <td>@Html.DisplayNameFor(product => product.Price)</td>
+            <td>@Html.DisplayNameFor(product => product.First().Id)</td>
+            <td>@Html.DisplayNameFor(product => product.First().Name)</td>
+            <td>@Html.DisplayNameFor(product => product.First().Order)</td>
+            <td>@*@Html.DisplayNameFor(product => product.First().SectionId)*@</td>
+            <td>@Html.DisplayNameFor(product => product.First().Brand.Id)</td>
+            <td>@Html.DisplayNameFor(product => product.First().ImageUrl)</td>
+            <td>@Html.DisplayNameFor(product => product.First().Price)</td>
             <td></td>
         </tr>
     </thead>
@@ -27,8 +27,8 @@
                 <td>@Html.DisplayFor(p => product.Id)</td>
                 <td>@Html.DisplayFor(p => product.Name)</td>
                 <td>@Html.DisplayFor(p => product.Order)</td>
-                <td>@Html.DisplayFor(p => product.SectionId)</td>
-                <td>@Html.DisplayFor(p => product.BrandId)</td>
+                <td>@*@Html.DisplayFor(p => product.SectionId)*@</td>
+                <td>@Html.DisplayFor(p => product.Brand.Id)</td>
                 <td>@Html.DisplayFor(p => product.ImageUrl)</td>
                 <td>@Html.DisplayFor(p => product.Price)</td>
                 <td>
