--- a/UI/WebStore/Views/Shared/Partial/_Header.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_Header.cshtml
@@ -87,7 +87,6 @@
                                 <ul role="menu" class="sub-menu">
                                     <li><a asp-controller="Catalog" asp-action="Shop">Товары</a></li>
                                     <li><a asp-controller="Catalog" asp-action="ProductDetails" asp-route-id="1">Детали товара</a></li>
-                                    <li><a asp-controller="Home" asp-action="Checkout">Оформление заказа</a></li>
                                     <li><a asp-controller="Cart" asp-action="Details">Корзина</a></li>
                                     <li><a asp-controller="Account" asp-action="Login">Вход</a></li>
                                 </ul>
@@ -99,7 +98,7 @@
                                     <li><a asp-controller="Home" asp-action="BlogSingle">Блог</a></li>
                                 </ul>
                             </li>
-                            <li><a asp-controller="Home" asp-action="Error404">Ошибка 404</a></li>
+                            <li><a asp-controller="Home" asp-action="NotFoundPage">Ошибка 404</a></li>
                             <li><a asp-controller="Home" asp-action="ContactUs">Контакты</a></li>
                             <li><a asp-controller="Employes" asp-action="Index">Сотрудники</a></li>
                             <li class="dropdown">
