--- a/UI/WebStore/Views/Shared/Partial/_Header.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_Header.cshtml
@@ -81,7 +81,7 @@
                     </div>
                     <div class="mainmenu pull-left">
                         <ul class="nav navbar-nav collapse navbar-collapse">
-                            <li><a is-active-route asp-controller="Home" asp-action="Index" class="active">Главная</a></li>
+                            <li><a is-active-route asp-controller="Home" asp-action="Index">Главная</a></li>
                             <li class="dropdown">
                                 <a is-active-route asp-controller="Catalog" asp-action="Shop">Магазин<i class="fa fa-angle-down"></i></a>
                                 <ul role="menu" class="sub-menu">
