--- a/UI/WebStore/Views/Shared/_LayoutBase.cshtml
+++ b/UI/WebStore/Views/Shared/_LayoutBase.cshtml
@@ -19,6 +19,7 @@
 
     <environment include="Development">
         <link href="~/css/site.css" rel="stylesheet" asp-append-version="true">
+        <link href="~/css/main.css" rel="stylesheet" asp-append-version="true">
     </environment>
     <environment exclude="Development">
         <link href="~/css/site.min.css" rel="stylesheet" asp-append-version="true">
