--- a/UI/WebStore/Views/Catalog/Shop.cshtml
+++ b/UI/WebStore/Views/Catalog/Shop.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebStore.ViewModels.CatalogViewModel
 @{
-    ViewData["Title"] = "Shop";
-    Layout = "_LayoutBase";
+    ViewData["Title"] = "Каталог товров";
+    Layout = "_LayoutBreadcrumbs";
 }
 
 
