--- a/UI/WebStore/Views/Shared/Partial/_FeaturesItems.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_FeaturesItems.cshtml
@@ -1,5 +1,9 @@
 ﻿@model IEnumerable<WebStore.ViewModels.ProductViewModel>
 
+@{
+    var is_brand = Context.Request.Query.ContainsKey("BrandId");
+}
+
 <div class="features_items">
     <!--features_items-->
     <h2 class="title text-center">Features Items</h2>
@@ -9,25 +13,50 @@
         <div class="col-sm-4">
             <div class="product-image-wrapper">
                 <div class="single-products">
-                    <div class="productinfo text-center">
-                        <img src="~/images/shop/@product.ImageUrl" alt="@product.Name" />
-                        <h2>@product.Price.ToString("C")</h2>
-                        <p>@product.Name</p>
-                        <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@product.Id"
-                           class="btn btn-default add-to-cart">
-                            <i class="fa fa-shopping-cart"></i>Добавить в корзину
-                        </a>
-                    </div>
-                    <div class="product-overlay">
-                        <div class="overlay-content">
-                            <h2>@product.Price.ToString("C")</h2>
-                            <p><a asp-controller="Catalog" asp-action="ProductDetails" asp-route-id="@product.Id">@product.Name</a></p>
-                            <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@product.Id"
-                               class="btn btn-default add-to-cart">
-                                <i class="fa fa-shopping-cart"></i>Добавить в корзину
-                            </a>
-                        </div>
-                    </div>
+                   @if (is_brand)
+                   {
+                       <div class="productinfo text-center">
+                           <img src="~/images/shop/@product.ImageUrl" alt="@product.Name" />
+                           <h2>@product.Price.ToString("C")</h2>
+                           <p>@product.Name</p>
+                           <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@product.Id"
+                              class="btn btn-default add-to-cart">
+                               <i class="fa fa-shopping-cart"></i>Добавить в корзину
+                           </a>
+                       </div>
+                       <div class="product-overlay">
+                           <div class="overlay-content">
+                               <h2>@product.Price.ToString("C")</h2>
+                               <p><a asp-controller="Catalog" asp-action="ProductDetails" asp-route-id="@product.Id" asp-route-FromBrand="true">@product.Name</a></p>
+                               <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@product.Id"
+                                  class="btn btn-default add-to-cart">
+                                   <i class="fa fa-shopping-cart"></i>Добавить в корзину
+                               </a>
+                           </div>
+                       </div>
+                   }
+                   else
+                   {
+                       <div class="productinfo text-center">
+                           <img src="~/images/shop/@product.ImageUrl" alt="@product.Name" />
+                           <h2>@product.Price.ToString("C")</h2>
+                           <p>@product.Name</p>
+                           <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@product.Id"
+                              class="btn btn-default add-to-cart">
+                               <i class="fa fa-shopping-cart"></i>Добавить в корзину
+                           </a>
+                       </div>
+                       <div class="product-overlay">
+                           <div class="overlay-content">
+                               <h2>@product.Price.ToString("C")</h2>
+                               <p><a asp-controller="Catalog" asp-action="ProductDetails" asp-route-id="@product.Id">@product.Name</a></p>
+                               <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@product.Id"
+                                  class="btn btn-default add-to-cart">
+                                   <i class="fa fa-shopping-cart"></i>Добавить в корзину
+                               </a>
+                           </div>
+                       </div>
+                   }
                 </div>
                 <div class="choose">
                     <ul class="nav nav-pills nav-justified">
