--- a/UI/WebStore/Views/Shared/Partial/_FeaturesItems.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_FeaturesItems.cshtml
@@ -28,8 +28,8 @@
                            <div class="overlay-content">
                                <h2>@product.Price.ToString("C")</h2>
                                <p><a asp-controller="Catalog" asp-action="ProductDetails" asp-route-id="@product.Id" asp-route-FromBrand="true">@product.Name</a></p>
-                               <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@product.Id"
-                                  class="btn btn-default add-to-cart">
+                               <a href="#" data-id="@product.Id"
+                                  class="btn btn-default add-to-cart CallAddToCart">
                                    <i class="fa fa-shopping-cart"></i>Добавить в корзину
                                </a>
                            </div>
@@ -41,8 +41,8 @@
                            <img src="~/images/shop/@product.ImageUrl" alt="@product.Name" />
                            <h2>@product.Price.ToString("C")</h2>
                            <p>@product.Name</p>
-                           <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@product.Id"
-                              class="btn btn-default add-to-cart">
+                           <a href="#" data-id="@product.Id"
+                              class="btn btn-default add-to-cart CallAddToCart">
                                <i class="fa fa-shopping-cart"></i>Добавить в корзину
                            </a>
                        </div>
@@ -50,8 +50,8 @@
                            <div class="overlay-content">
                                <h2>@product.Price.ToString("C")</h2>
                                <p><a asp-controller="Catalog" asp-action="ProductDetails" asp-route-id="@product.Id">@product.Name</a></p>
-                               <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@product.Id"
-                                  class="btn btn-default add-to-cart">
+                               <a href="#" data-id="@product.Id"
+                                  class="btn btn-default add-to-cart CallAddToCart">
                                    <i class="fa fa-shopping-cart"></i>Добавить в корзину
                                </a>
                            </div>
