--- a/UI/WebStore/Views/Shared/Partial/_Header.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_Header.cshtml
@@ -57,7 +57,7 @@
                             </ul>
                         </div>*@
                         
-                        <div class="col-sm-8">
+                        <div class="pull-right" id="cartContainer">
                             @*@await Component.InvokeAsync("Cart")*@
                             <vc:cart />
                         </div>
