--- a/UI/WebStore/Views/Shared/Partial/_Header.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_Header.cshtml
@@ -111,6 +111,7 @@
                                 <ul role="menu" class="sub-menu">
                                     <li><a is-active-route asp-controller="WebApiTest" asp-action="Index">WebAPI</a></li>
                                     <li><a is-active-route asp-controller="Home" asp-action="ThrowException">Тестовое исключение</a></li>
+                                    <li><a is-active-route asp-controller="AjaxTest" asp-action="Index">AJAX</a></li>
                                 </ul>
                             </li>
                         </ul>
