--- a/UI/WebStore/Views/Shared/Partial/_Header.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_Header.cshtml
@@ -112,6 +112,7 @@
                                     <li><a is-active-route asp-controller="WebApiTest" asp-action="Index">WebAPI</a></li>
                                     <li><a is-active-route asp-controller="Home" asp-action="ThrowException">Тестовое исключение</a></li>
                                     <li><a is-active-route asp-controller="AjaxTest" asp-action="Index">AJAX</a></li>
+                                    <li><a is-active-route asp-controller="AjaxTest" asp-action="SignalRTest">Signal-R</a></li>
                                 </ul>
                             </li>
                         </ul>
