--- a/UI/WebStore/Views/Catalog/ProductDetails.cshtml
+++ b/UI/WebStore/Views/Catalog/ProductDetails.cshtml
@@ -63,7 +63,7 @@
                                 <label>Количество:</label>
                                 <input type="text" value="3" />
                                 <a href="#" 
-                                   class="btn btn-default cart CallAddToCart"
+                                   class="btn btn-default cart add-to-cart"
                                    data-id="@Model.Id">
                                     <i class="fa fa-shopping-cart"></i>
                                     Добавить в корзину
