--- a/UI/WebStore/Views/AjaxTest/SignalRTest.cshtml
+++ b/UI/WebStore/Views/AjaxTest/SignalRTest.cshtml
@@ -11,7 +11,7 @@
         <input type="button" id="SendButton" value="Отправить"/>
     </div>
     
-    <div id="InformationBlock"></div>
+    <ul id="InformationBlock"></ul>
 </div>
 
 @section Scripts
@@ -26,18 +26,12 @@
             .configureLogging(signalR.LogLevel.Information)
             .build();
 
-        connection.on("Send", function(data) {
-            let element = document.createElement("p");
-            element.appendChild(document.createTextNode(data));
-            let firstElement = document.getElementById("InformationBlock").firstChild;
-            document.getElementById("InformationBlock").insertBefore(element, firstElement);
+        connection.on("Send", data => {
+            $("#InformationBlock").prepend($("<li></li>").html(data));
         });
 
-        $(function() {
-            $("#SendButton").click(e => {
-                let information = document.getElementById("message").value;
-                connection.invoke("Send", information);
-            });
+        $("#SendButton").click(e => {
+            connection.invoke("Send", $("#message").val());
         });
 
         connection.start();
